# AuthCore

./: .gitignore  Makefile  README.md  pyproject.toml
adapters/auth/: jwt_auth_service.py
adapters/db/: sqlite_user_repository.py
adapters/web/: api.py
adapters/web/middlewares/: auth.py
adapters/web/routes/: auth_routes.py  user_routes.py
adapters/web/schemas/: user_schema.py
app/: main.py
config/: settings.py
core/entities/: user.py
core/ports/: user_repository.py
core/use_cases/: authenticate_user.py  create_user.py  delete_user.py  list_one_user.py  list_users.py  update_user.py
core/utils/: check_user_role.py  password_utils.py  validate_query.py
scripts/: populate_db.py
tests/unit/: test_authenticate_user.py  test_password_utils.py  test_use_case_delete_user.py  test_use_case_list_all_users.py  test_use_case_list_one_user.py  test_use_case_update_one_user.py
