[project]
name = "authcore"
version = "0.1.0"
description = "Basic authentication core backend"
authors = [
    {name = "ramirezmz",email = "robertopaoloramirezmunoz7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
